TestRepo2/src/objects/Featured_Product__c.object
<CustomObject>
    <fields>
        <fullName>Diageo_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Diageo Product</label>
        <referenceTo>Diageo_Product__c</referenceTo>
        <relationshipLabel>Featured Products</relationshipLabel>
        <relationshipName>Featured_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Featured Products</relationshipLabel>
        <relationshipName>Featured_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Featured Product</label>
    <nameField>
        <displayFormat>Pid-{0000}</displayFormat>
        <label>Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Featured Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>